Added views, and started weather api

--- a/public/app/routes/home/homeStyles.sass
+++ b/public/app/routes/home/homeStyles.sass
@@ -17,6 +17,8 @@ $marsRed: #AA3300
     font-family: Arial, Helvetica, sans-serif
     font-weight: bold
     color: white
+    // &:link
+    //     color: white
 .content
     // padding-bottom: 15px
     width: 100%
