--- a/public/app/routes/weather/weather.scss
+++ b/public/app/routes/weather/weather.scss
@@ -2,9 +2,13 @@
     display: flex;
     align-items: center;
     // justify-content: center;
+    margin: 30px 40px;
 }
 
 .weather_graphic{
-    width: 100%;
+    width: 240%;
     margin-left: 20px;
+}
+h4{
+    margin: 20px;
 }
