--- a/public/app/routes/home/homeStyles.scss
+++ b/public/app/routes/home/homeStyles.scss
@@ -95,11 +95,10 @@ div {
 
 .img_cntnr {
     width: 80%;
-    // margin: 5px;
     display: flex; // justify-content: center;
     flex-direction: column;
     flex-wrap: wrap;
-    margin: 5px;
+    margin: 15px;
     // &:hover {
     //     transition: transform 0.5s ease;
     //     transform: scale(1.4); // background: $marsRed;
@@ -114,6 +113,7 @@ div {
 
 .rvr_img {
     width: auto;
+    border-radius: 20px;
     max-width: 100%;
     max-height: 300px;
     height: auto;
