--- a/bundle.css
+++ b/bundle.css
@@ -76,10 +76,11 @@ div .ng-scope {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  margin: 5px; }
+  margin: 15px; }
 
 .rvr_img {
   width: auto;
+  border-radius: 20px;
   max-width: 100%;
   max-height: 300px;
   height: auto; }
@@ -94,8 +95,12 @@ footer {
 
 .weather_info {
   display: flex;
-  align-items: center; }
+  align-items: center;
+  margin: 30px 40px; }
 
 .weather_graphic {
-  width: 100%;
+  width: 240%;
   margin-left: 20px; }
+
+h4 {
+  margin: 20px; }
